--- a/index.html
+++ b/index.html
@@ -378,10 +378,17 @@
                 <p>Copyright &copy; 2016 by Omnifood. All rights reserved.</p>
             </div>
         </footer>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script src="//cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
+        <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
+        <script src="//cdn.jsdelivr.net/selectivizr/1.0.3b/selectivizr.min.js"></script>
+        <script src="resources/js/script.js"></script>
     </body>
+
 </html>
 
 
-<!--
 
--->
+
+
