--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <nav>
                 <div class="row">
                     <img src="resources/img/logo-white.png" alt="Omnifood logo" class="logo">
+                    <img src="resources/img/logo.png" alt="Omnifood logo" class="logo-black">
                     <ul class="main-nav">
                         <li><a href="#">Food Delivery</a></li>
                         <li><a href="#">How it works</a></li>
@@ -31,7 +32,7 @@
                 <a class="btn btn-ghost" href="#">Show me more</a>
             </div>
         </header>
-        <section class="section-features">
+        <section class="section-features js--section-features">
             <div class="row">
                 <h2>Get food fast &mdash; not fast food.</h2>
                 <p class="long-copy">
@@ -358,7 +359,7 @@
             <div class="row">
                 <div class="col span-1-of-2">
                     <ul class="footer-nav">
-                        <li><a href="#">About us</a> </li>
+                        <li><a href="#">About Us</a> </li>
                         <li><a href="#">Blog</a> </li>
                         <li><a href="#">Press</a> </li>
                         <li><a href="#">IOS App</a> </li>
@@ -384,6 +385,7 @@
         <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="//cdn.jsdelivr.net/selectivizr/1.0.3b/selectivizr.min.js"></script>
         <script src="resources/js/script.js"></script>
+    <script src="vendors/js/jquery.waypoints.min.js"></script>
     </body>
 
 </html>
